updated the project to include videos and screenshot of the commuteweell app

--- a/index.html
+++ b/index.html
@@ -260,7 +260,50 @@
             </div>
 
             <div class="projects-grid">
-                <!-- Robotic Exoskeleton -->
+                <!-- CommuteWell - Product Management Featured -->
+                <div class="project-card featured" data-category="product" data-project="commute">
+                    <div class="project-image">
+                        <div class="project-icon">📱</div>
+                        <div class="category-badge product-badge">Product Management</div>
+                        <div class="featured-badge">Featured</div>
+                    </div>
+                    <div class="project-content">
+                        <h3>CommuteWell</h3>
+                        <h4 class="project-subtitle">React Native Implementation</h4>
+                        <p>A comprehensive social commuting platform evolved from PRD to functional React Native app with 16+ screens and complete user flows.</p>
+                        <div class="project-tags">
+                            <span class="tag">Product Design</span>
+                            <span class="tag">User Research</span>
+                            <span class="tag">PRD Writing</span>
+                        </div>
+                        <div class="project-overlay">
+                            <button class="view-project-btn">View Details</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Spotify Case Study - Product Management -->
+                <div class="project-card" data-category="product" data-project="spotify">
+                    <div class="project-image">
+                        <div class="project-icon">🎵</div>
+                        <div class="category-badge product-badge">Product Management</div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Spotify Case Study</h3>
+                        <h4 class="project-subtitle">Product Strategy Project</h4>
+                        <p>A product case study aimed at solving user dissatisfaction with Spotify's recommendation algorithm by proposing new feature directions.</p>
+                        <div class="project-tags">
+                            <span class="tag">Product Strategy</span>
+                            <span class="tag">JTBD Framework</span>
+                            <span class="tag">AARRR Funnel</span>
+                        </div>
+                        <div class="project-overlay">
+                            <button class="view-project-btn">View Details</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Robotic Exoskeleton - Robotics Featured -->
                 <div class="project-card featured" data-category="robotics" data-project="exoskeleton">
                     <div class="project-image">
                         <img src="resources/project-images/exoskeleton/exoskeleton_thumbnail.jpeg" alt="Robotic Exoskeleton" class="project-thumbnail">
@@ -282,7 +325,7 @@
                     </div>
                 </div>
 
-                <!-- Warehouse Automation -->
+                <!-- Warehouse Automation - Robotics Featured -->
                 <div class="project-card featured" data-category="robotics" data-project="warehouse">
                     <div class="project-image">
                         <img src="resources/project-images/other-projects/ware_house_automation_thumbnail.PNG" alt="Warehouse Automation Robot" class="project-thumbnail">
@@ -304,7 +347,7 @@
                     </div>
                 </div>
 
-                <!-- VR Robot Control -->
+                <!-- VR Robot Control - Robotics -->
                 <div class="project-card" data-category="robotics" data-project="vr-robot">
                     <div class="project-image">
                         <img src="resources/project-images/other-projects/kinova_vr_thumbnail.PNG" alt="VR-Controlled Kinova Robot" class="project-thumbnail">
@@ -318,49 +361,6 @@
                             <span class="tag">Unity3D</span>
                             <span class="tag">VR Headsets</span>
                             <span class="tag">ROS</span>
-                        </div>
-                        <div class="project-overlay">
-                            <button class="view-project-btn">View Details</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Commute Together App -->
-                <div class="project-card featured" data-category="product" data-project="commute">
-                    <div class="project-image">
-                        <div class="project-icon">📱</div>
-                        <div class="category-badge product-badge">Product Management</div>
-                        <div class="featured-badge">Featured</div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Commute Together App</h3>
-                        <h4 class="project-subtitle">Product Design Initiative</h4>
-                        <p>A mobile app concept designed to connect commuters traveling similar routes, fostering micro-communities and social engagement.</p>
-                        <div class="project-tags">
-                            <span class="tag">Product Design</span>
-                            <span class="tag">User Research</span>
-                            <span class="tag">Figma</span>
-                        </div>
-                        <div class="project-overlay">
-                            <button class="view-project-btn">View Details</button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Spotify Case Study -->
-                <div class="project-card" data-category="product" data-project="spotify">
-                    <div class="project-image">
-                        <div class="project-icon">🎵</div>
-                        <div class="category-badge product-badge">Product Management</div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Spotify Case Study</h3>
-                        <h4 class="project-subtitle">Product Strategy Project</h4>
-                        <p>A product case study aimed at solving user dissatisfaction with Spotify's recommendation algorithm by proposing new feature directions.</p>
-                        <div class="project-tags">
-                            <span class="tag">Product Strategy</span>
-                            <span class="tag">JTBD Framework</span>
-                            <span class="tag">AARRR Funnel</span>
                         </div>
                         <div class="project-overlay">
                             <button class="view-project-btn">View Details</button>
